# libfacedetection-rs

./: .gitmodules  Cargo.toml
.github/workflows/: rust.yml
libfacedetection-rs/: Cargo.toml  Readme.md
libfacedetection-rs/src/: lib.rs
libfacedetection-sys/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  build.rs  wrapper.hpp
libfacedetection-sys/bindings/: libfacedetection_aarch64-apple-darwin.rs  libfacedetection_x86_64-unknown-linux-gnu.rs
libfacedetection-sys/src/: lib.rs
